--- a/Konstruktor/Konstruktor.csproj
+++ b/Konstruktor/Konstruktor.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6E0B9D08-A061-40CF-B6EF-8455CDD95CD2}</ProjectGuid>
+    <ProjectGuid>{42E87BEC-03D5-4FEE-9488-0D8BA72ECC5A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KleinerGeldautomat</RootNamespace>
-    <AssemblyName>ConsoleApplication2</AssemblyName>
+    <RootNamespace>Konstruktor</RootNamespace>
+    <AssemblyName>Konstruktor</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
