--- a/Methode/Methode.csproj
+++ b/Methode/Methode.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6E0B9D08-A061-40CF-B6EF-8455CDD95CD2}</ProjectGuid>
+    <ProjectGuid>{CEA845CF-108A-4937-ACAC-ABF9487A102F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>KleinerGeldautomat</RootNamespace>
-    <AssemblyName>ConsoleApplication2</AssemblyName>
+    <RootNamespace>Methode</RootNamespace>
+    <AssemblyName>Methode</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
